Update Transformers Sentiment Analysis.ipynb

--- a/Transformers Sentiment Analysis.ipynb
+++ b/Transformers Sentiment Analysis.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### This is my notebook on Transformers"
+    "## This is my notebook on Transformers"
    ]
   },
   {
