Update Transformers Sentiment Analysis.ipynb

--- a/Transformers Sentiment Analysis.ipynb
+++ b/Transformers Sentiment Analysis.ipynb
@@ -180,6 +180,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
+    "model_name = \"distilbert-base-uncased-finetuned-sst-2-english\"\n",
+    "pt_model = AutoModelForSequenceClassification.from_pretrained(model_name)\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
