Update Transformers Sentiment Analysis.ipynb

--- a/Transformers Sentiment Analysis.ipynb
+++ b/Transformers Sentiment Analysis.ipynb
@@ -1,12 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## This is my notebook on Transformers"
+    "### This is my notebook on Transformers sentiment analysis in English"
    ]
   },
   {
@@ -106,6 +106,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###Using "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -126,6 +135,15 @@
     "model = AutoModelForSequenceClassification.from_pretrained(model_name)\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
     "classifier = pipeline('sentiment-analysis', model=model, tokenizer=tokenizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##Parenthesis to check Greek Bert as it was published from NLP AUEB"
    ]
   },
   {
@@ -180,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,6 +268,36 @@
     "outputs = lm_model_greek(torch.tensor([input_ids]))[0]\n",
     "print(tokenizer_greek.convert_ids_to_tokens(outputs[0, 8].max(0)[1].item()))\n",
     "# the most plausible prediction for the second [MASK] is \"trips\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###Back to English instructions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
+    "model_name = \"distilbert-base-uncased-finetuned-sst-2-english\"\n",
+    "pt_model = AutoModelForSequenceClassification.from_pretrained(model_name)\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs = tokenizer(\"We are very happy to show you the 🤗 Transformers library.\")    "
    ]
   }
  ],
