Update Transformers Sentiment Analysis.ipynb

--- a/Transformers Sentiment Analysis.ipynb
+++ b/Transformers Sentiment Analysis.ipynb
@@ -1,13 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "### This is my notebook on Transformers sentiment analysis in English"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -106,15 +104,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "###Using "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -138,13 +127,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "##Parenthesis to check Greek Bert as it was published from NLP AUEB"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -276,7 +263,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "###Back to English instructions"
+    "###Back to English instructi"
    ]
   },
   {
