--- a/Transformers Sentiment Analysis.ipynb
+++ b/Transformers Sentiment Analysis.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "source": [
-    "##Parenthesis to check Greek Bert as it was published from NLP AUEB"
+    "Parenthesis to check Greek Bert as it was published from NLP AUEB"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -261,10 +261,8 @@
    "source": [
     "###Back to English instructi"
    ],
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": 19,
-   "outputs": []
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
