--- a/Transformers Sentiment Analysis.ipynb
+++ b/Transformers Sentiment Analysis.ipynb
@@ -259,7 +259,7 @@
   },
   {
    "source": [
-    "###Back to English instructi"
+    "Back to English instructions"
    ],
    "cell_type": "markdown",
    "metadata": {}
