--- a/Transformers Sentiment Analysis.ipynb
+++ b/Transformers Sentiment Analysis.ipynb
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,11 +278,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "inputs = tokenizer(\"We are very happy to show you the 🤗 Transformers library.\")    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "$x_{1} + x_{2} + \\cdots + x_{n}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "('this', 'is')\n('is', 'a')\n('a', 'foo')\n('foo', 'bar')\n('bar', 'sentences')\n('sentences', 'and')\n('and', 'i')\n('i', 'want')\n('want', 'to')\n('to', 'ngramize')\n('ngramize', 'it')\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk import ngrams\n",
+    "\n",
+    "sentence = 'this is a foo bar sentences and i want to ngramize it'\n",
+    "\n",
+    "n = 2\n",
+    "sixgrams = ngrams(sentence.split(), n)\n",
+    "\n",
+    "for grams in sixgrams:\n",
+    "  print (grams)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "__________________________________________________\nTitle-- Spain, Greece and US holidays 'optimistically' boosted ahead ...\nDate/Time-- 39 mins ago\ndescription-- SPAIN, Greece and the USA all did not make the Government's travel \"green list\" on Friday. However, with the list set to be reviewed every three weeks, it seems ...\nLink-- https://www.express.co.uk/travel/articles/1433791/spain-greece-us-holidays-green-list-travel-bookings-review\n__________________________________________________\nTitle-- High Bar for Proof Limits Interest for Greek Citizenship Test\nDate/Time-- 53 mins ago\ndescription-- ... in Greece for at least several years. “Interest is already great for the exams scheduled to take place in September,” they added without explaining why it wasn't ...\nLink-- https://www.thenationalherald.com/archive_general_news_greece/arthro/high_bar_for_proof_limits_interest_for_greek_citizenship_test-2397515/\n__________________________________________________\nTitle-- Woman in Athens Acid Attack Charged With Attempted Murder\nDate/Time-- 57 mins ago\ndescription-- United States · Greece · World · Obituaries · Memorials ... Columnists · Letter to Editor · Dear Stavroula · Guest Viewpoints · GREECE ... Renting in Greece.\nLink-- https://www.thenationalherald.com/archive_general_news_greece/arthro/woman_in_athens_acid_attack_charged_with_attempted_murder-2397519/\n__________________________________________________\nTitle-- Greek Judges Cite Social Media Bullying Over Custody Cases\nDate/Time-- 58 mins ago\ndescription-- ATHENS – With proposed reforms from the New Democracy government over parental roles in divorce cases drawing fire from critics, judges in Greece revealed ...\nLink-- https://www.thenationalherald.com/archive_general_news_greece/arthro/greek_judges_cite_social_media_bullying_over_custody_cases-2397517/\n__________________________________________________\nTitle-- COVID-19 | Hoping To Lure Back Tourists, Greece Reopens ...\nDate/Time-- 1 hour ago\ndescription-- With widely spaced sun loungers and regular disinfections, Greece reopened its organised beaches on May 8 as the popular Mediterranean holiday destination ...\nLink-- https://www.moneycontrol.com/news/photos/world/covid-19-hoping-to-lure-back-tourists-greece-reopens-beaches-despite-pandemic-6872581.html\n__________________________________________________\nTitle-- Greece Marks Europe Day 2021 with Acropolis Ceremony\nDate/Time-- 1 hour ago\ndescription-- The flags of Greece and the European Union were raised at the Acropolis early on Sunday in celebration of “Europe Day 2021”. The ceremony was attended by ...\nLink-- https://greekreporter.com/2021/05/09/greece-marks-europe-day-2021-acropolis-ceremony/\n__________________________________________________\nTitle-- Reopening of Sports Facilities in Greece Moves Forward with ...\nDate/Time-- 1 hour ago\ndescription-- Reopening of Sports Facilities in Greece Moves Forward with Joint Ministerial Decision. Ευρωκίνηση. Deputy Sports Minister Lefteris Avgenakis. (Photo by ...\nLink-- https://www.thenationalherald.com/sports_greece/arthro/reopening_of_sports_facilities_in_greece_moves_forward_with_joint_ministerial_decision-2397512/\n__________________________________________________\nTitle-- A Slice of Greece Down Under: Australia Cliffs Resemble ...\nDate/Time-- 2 hours ago\ndescription-- Australia has banned foreign travel, Australians cannot fly to Greece, but at least they can enjoy diving into turquoise waters off a hidden cliff that resembles an ...\nLink-- https://greekreporter.com/2021/05/09/slice-of-greece-down-under-australia-cliffs-resemble-aegean-island/\n__________________________________________________\nTitle-- Greece to End SMS System for Circulating Outside Home on ...\nDate/Time-- 3 hours ago\ndescription-- Greece to End SMS System for Circulating Outside Home on May 14. Αssociated Press. Two men wearing face masks to protect against coronavirus, walk as a ...\nLink-- https://www.thenationalherald.com/archive_general_news_greece/arthro/greece_to_end_sms_system_for_circulating_outside_home_on_may_14-2396918/\n__________________________________________________\nTitle-- Greek Businessman Thanassis Lavidas of Lavipharm Dies ...\nDate/Time-- 3 hours ago\ndescription-- Lavidas also chaired the Greece-US Business Council, and had been recognized by France as a Chevalier of the Legion of Honor in 2011 for promoting ...\nLink-- https://www.thenationalherald.com/archive_general_news_greece/arthro/greek_businessman_thanassis_lavidas_of_lavipharm_dies_aged_73-2396917/\n"
+     ]
+    }
+   ],
+   "source": [
+    "from GoogleNews import GoogleNews\n",
+    "\n",
+    "googlenews = GoogleNews()\n",
+    "googlenews = GoogleNews(period ='7d')\n",
+    "googlenews.search('Greece')\n",
+    "result=googlenews.result()\n",
+    "for x in result:\n",
+    "    print(\"_\"*50)\n",
+    "    print(\"Title--\",x['title'])\n",
+    "    print(\"Date/Time--\",x['date'])\n",
+    "    print(\"description--\",x['desc'])\n",
+    "    print(\"Link--\",x['link'])\n",
+    "    write.csv()\n",
+    "\n"
    ]
   }
  ],
